--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: #000;
+$secondary-color: #3a1aee;
 $show-home-image: true;
 $home-image: url(/dist/img/background.jpg);
 $background-opacity: 0.9;
@@ -24,6 +24,15 @@ $background-opacity: 0.9;
                 background: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+//set text color
+@function set-text-color ($color){
+    @if(lightness($color > 40)){
+        @return #000;
+    } @else {
+        @return #fff;
     }
 }
 
