--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,16 @@
 // For wide screens
 @include mediaXl{
+    .projects{
+        grid-template-columns: repeat(4, 1fr);
+    }
 
 }
 
 // For desktops & laptops
 @include mediaLg{
-    
+    .projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 // For tablets & sm laptops
@@ -55,11 +60,19 @@
         'job3';
         grid-auto-columns: 1fr;
     }
+
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 // For smartphones
 @include mediaSm{
     main#home h1{
         margin-top: 10vh;
+    }
+
+    .projects{
+        grid-template-columns: 1fr;
     }
 }
