--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,6 +108,50 @@ main{
     border-bottom: $secondary-color 5px solid;
 }
 
+// ------------projects---------------------
+.projects{
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    img{
+        width: 100%;
+        border: 3px solid #fff;
+
+        &:hover{
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut();
+        }
+    }
+}
+
+//-----------Button styles---------------
+.btn{
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3;
+
+    &:hover{
+        background: $primary-color;
+        color: $secondary-color;
+    }
+
+}
+
+.btn-dark{
+    @extend .btn;
+    background: darken($secondary-color, 50);
+    color: #fff;
+}
+
+.btn-light{
+    @extend .btn;
+}
+
+
+// MAIN FOOTER STYLE
 #main-footer{
     text-align: center;
     padding: 1rem;
@@ -116,3 +160,5 @@ main{
 }
 
 @import 'mobile';
+
+
